--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,17 +15,19 @@ services:
     networks:
       - net
 
-  mongodb-client:
-    image: mongoclient/mongoclient
-    container_name: mongodb-client
+  mongo-express:
+    image: mongo-express
+    container_name: mongo-express
     restart: always
     depends_on:
       mongodb:
         condition: service_started
     ports:
-      - "3000:3000"
+      - "8081:8081"
     environment:
-      MONGO_URL: "mongodb://admin:admin@mongodb:27017"
+      ME_CONFIG_MONGODB_SERVER: mongodb
+      ME_CONFIG_MONGODB_ADMINUSERNAME: admin
+      ME_CONFIG_MONGODB_ADMINPASSWORD: admin
     networks:
       - net
 
