Add data model. Adjust db connection config

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,3 +6,10 @@ spring:
   threads:
     virtual:
       enabled: true
+  data:
+    mongodb:
+      host: 'localhost'
+      database: 'device_db'
+      username: 'device_service'
+      password: 'device@app'
+      uuid-representation: standard
