Add actuator config

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,6 +14,23 @@ spring:
       password: 'device@app'
       uuid-representation: standard
 
+management:
+  server:
+    port: 8083
+  health:
+    circuitbreakers:
+      enabled: true
+    ratelimiters:
+      enabled: true
+  endpoints:
+    web:
+      base-path: /
+      exposure:
+        include: health,info,circuitbreakers,circuitbreakerevents,metrics
+  endpoint:
+    health:
+      show-details: always
+
 open-api:
   title: "Device Service"
   version: "1.0.0"
