--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -10,4 +10,43 @@ spring:
     mongodb:
       uuid-representation: standard
 
+resilience4j:
+  circuitbreaker:
+    configs:
+      default:
+        register-health-indicator: true
+    instances:
+      save-device-cb:
+        failure-rate-threshold: 50
+        slow-call-duration-threshold: 2s
+        sliding-window-size: 2
+        minimum-number-of-calls: 2
+        slow-call-rate-threshold: 100
+        sliding-window-type: COUNT_BASED
+        wait-duration-in-open-state: 10s
+        permitted-number-of-calls-in-half-open-state: 3
+      read-all-devices-cb: &default-cb-config
+        failure-rate-threshold: 50
+        slow-call-duration-threshold: 2s
+        sliding-window-size: 2
+        minimum-number-of-calls: 2
+        slow-call-rate-threshold: 100
+        sliding-window-type: COUNT_BASED
+        wait-duration-in-open-state: 2s
+        permitted-number-of-calls-in-half-open-state: 3
+      read-one-device-cb: *default-cb-config
+      update-device-cb: *default-cb-config
+      delete-device-cb: *default-cb-config
+  retry:
+    instances:
+      save-device-retry: &default-retry-config
+        max-attempts: 3
+        wait-duration: 2s
+        enable-exponential-backoff: true
+        exponential-backoff-multiplier: 2
+        ignore-exceptions:
+          - io.github.resilience4j.circuitbreaker.CallNotPermittedException
+      read-all-devices-retry: *default-retry-config
+      read-one-device-retry: *default-retry-config
+
 de.flapdoodle.mongodb.embedded.version: '8.0.3'
