--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,21 @@ services:
     networks:
       - net
 
+  keycloak:
+    image: quay.io/keycloak/keycloak:26.1.3
+    command:
+      - start-dev
+      - --import-realm
+    ports:
+      - "8083:8080"
+    environment:
+      KC_BOOTSTRAP_ADMIN_USERNAME: admin
+      KC_BOOTSTRAP_ADMIN_PASSWORD: admin
+    volumes:
+      - ./kc:/opt/keycloak/data/import
+    networks:
+      - net
+
   app:
     build:
       context: .
