--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -2,3 +2,8 @@ spring:
   data:
     mongodb:
       host: 'mongo'
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          jwk-set-uri: 'http://keycloak:8080/realms/master/protocol/openid-connect/certs'
