--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,7 @@ services:
 
   keycloak:
     image: quay.io/keycloak/keycloak:26.1.3
+    restart: always
     command:
       - start-dev
       - --import-realm
@@ -40,8 +41,21 @@ services:
     environment:
       KC_BOOTSTRAP_ADMIN_USERNAME: admin
       KC_BOOTSTRAP_ADMIN_PASSWORD: admin
+      KC_HEALTH_ENABLED: true
     volumes:
       - ./kc:/opt/keycloak/data/import
+    networks:
+      - net
+
+  kc-healthchecker:
+    image: curlimages/curl
+    restart: on-failure
+    command:
+      - --fail
+      - http://keycloak:9000/health
+    depends_on:
+      keycloak:
+        condition: service_started
     networks:
       - net
 
@@ -51,6 +65,8 @@ services:
     depends_on:
       mongo:
         condition: service_started
+      kc-healthchecker:
+        condition: service_completed_successfully
     ports:
       - "8080:8080"
       - "8081:8081"
