--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,18 +30,34 @@ services:
     networks:
       - net
 
+  jaeger:
+    image: jaegertracing/jaeger
+    ports:
+      - "16686:16686"
+      - "4317:4317"
+    environment:
+      COLLECTOR_OTLP_ENABLED: true
+    networks:
+      - net
+
   keycloak:
     image: quay.io/keycloak/keycloak:26.1.3
     restart: always
     command:
       - start-dev
       - --import-realm
+    depends_on:
+      jaeger:
+        condition: service_started
     ports:
       - "8083:8080"
     environment:
       KC_BOOTSTRAP_ADMIN_USERNAME: admin
       KC_BOOTSTRAP_ADMIN_PASSWORD: admin
       KC_HEALTH_ENABLED: true
+      KC_TRACING_ENABLED: true
+      KC_TRACING_SAMPLER_TYPE: always_on
+      KC_TRACING_ENDPOINT: http://jaeger:4317
     volumes:
       - ./kc:/opt/keycloak/data/import
     networks:
@@ -65,8 +81,11 @@ services:
     depends_on:
       mongo:
         condition: service_started
+      jaeger:
+        condition: service_started
       kc-healthchecker:
         condition: service_completed_successfully
+    profiles: [ prod ]
     ports:
       - "8080:8080"
       - "8081:8081"
