--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -7,3 +7,8 @@ spring:
       resourceserver:
         jwt:
           jwk-set-uri: 'http://keycloak:8080/realms/master/protocol/openid-connect/certs'
+
+management:
+  otlp:
+    tracing:
+      endpoint: 'http://jaeger:4317'
